test_regress/t/t_pp_line_bad.out
%Error: t/t_pp_line_bad.v:100:1: `line was not properly formed with '`line number "filename" level'
`line 100
^
%Error: somefile:100:1: `line was not properly formed with '`line number "filename" level'
`line 100
^
%Error: somefile:100:1: `line was not properly formed with '`line number "filename" level'
%Error: internal tracking of file contents failed
^
%Error: t/t_pp_line_bad.v:7:1: Define or directive not defined: '`line'
`line
^~~~~
%Error: somefile:100:1: `line was not properly formed with '`line number "filename" level'
        t/t_pp_line_bad.v:101:1: ... note: In file included from t_pp_line_bad.v
%Error: Exiting due to
